feat: 增加中间层单一文件删除功能
